Add field document in params

--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -7,6 +7,9 @@
           %li= msg
 
   .field
+ 	=f.label :document
+    =f.file_field :document
+  .field
     = f.label :name
     = f.text_area :name
   .field
