--- a/app/views/research_efforts/show.html.haml
+++ b/app/views/research_efforts/show.html.haml
@@ -42,6 +42,9 @@
 %p
   %b Scientific school:
   = @research_effort.scientific_school
+%p
+  %b Is nir:
+  = @research_effort.is_nir
 
 = link_to 'Edit', edit_research_effort_path(@research_effort)
 \|
