--- a/app/views/research_efforts/index.html.haml
+++ b/app/views/research_efforts/index.html.haml
@@ -16,6 +16,7 @@
     %th Nir type
     %th Source
     %th Scientific school
+    %th Is nir
     %th
     %th
     %th
@@ -36,6 +37,7 @@
       %td= research_effort.nir_type
       %td= research_effort.source
       %td= research_effort.scientific_school
+      %td= research_effort.is_nir
       %td= link_to 'Show', research_effort
       %td= link_to 'Edit', edit_research_effort_path(research_effort)
       %td= link_to 'Destroy', research_effort, :method => :delete, :data => { :confirm => 'Are you sure?' }
