--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,20 +7,29 @@
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
-    .navbar.navbar-default
-      .navbar-header
-        %span.navbar-brand
-          МГИУ
+    .navbar.navbar-default{:role => 'navigation'}
       .container
-        %ul.nav.navbar-nav
-          = render 'layouts/topbar'
-        %ul.nav.navbar-nav.navbar-right
-          %li.navbar-brand
-            = @current_user
-          %li= link_to('Выйти', :controller => :application, :action => :logout)
-      .container
-        .row= render 'layouts/messages'
-        .row= yield
-        %footer
-          %p= copyrights
+        .navbar-header
+          %button.navbar-toggle.collapsed{:type => 'button', 'data-target' => '#bs-example-navbar-collapse-1', 'data-toggle' => 'collapse'}
+            %span.sr-only
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %span.navbar-brand
+            МГИУ
+        .collapse.navbar-collapse{:id => 'bs-example-navbar-collapse-1'}    
+          %ul.nav.navbar-nav
+            = render 'layouts/topbar'
+          %ul.nav.navbar-nav.navbar-right
+            %li.dropdown
+              = link_to('#', {class: 'dropdown-toggle', 'data-toggle' => 'dropdown', role: 'button', 'aria-expanded' => false}) do
+                = @current_user
+                %span.caret    
+                %ul.dropdown-menu{role: :menu}
+                  %li= link_to('Выйти', :controller => :application, :action => :logout)
+    .container
+      .row= render 'layouts/messages'
+      .row= yield
+      %footer
+        %p= copyrights
 
