--- a/app/views/layouts/_main.html.haml
+++ b/app/views/layouts/_main.html.haml
@@ -1,8 +1,11 @@
 .container 
   .row
     .col-sm-4
-      =link_to "ResearcEfforts", research_efforts_path, class: 'tile purple'      
+      .div.tile.purple
+        =link_to "ResearcEfforts", research_efforts_path     
     .col-sm-4
-      =link_to "Licences", licences_path, class: 'tile green'   
+      .div.tile.green
+        =link_to "Licences", licences_path   
     .col-sm-4
-      =link_to "OisRequests", ois_requests_path, class: 'tile orange'   
+      .div.tile.blue
+        =link_to "OisRequests", ois_requests_path 
