--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -40,14 +40,10 @@ strong {
 
 .tile {  
   width: 100%;
-	height: 100%;
 	display: block;
 	box-sizing: border-box;
 	background: #fff;		
-	padding-top: 50%;
-  padding-bottom: 50%;
-  padding-left: 50%;
-	padding-right: 50%;
+	padding: 10px;
 	margin-bottom: 20px;
 
   .title {
