try serialized depart

--- a/app/views/role_users/_form.html.haml
+++ b/app/views/role_users/_form.html.haml
@@ -7,13 +7,13 @@
           %li= msg
 
   .field
-    = f.label :role
-    = f.text_field :role
-  .field
     = f.label :user
     = f.text_field :user
   .field
-    = f.label :dept
-    = f.text_field :dept
+    = f.label :role
+    = f.text_field :role
+  .field
+    = f.label :department
+    = f.text_area :department
   .actions
     = f.submit 'Save'
