--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -39,15 +39,13 @@ strong {
 }
 
 .tile {  
-  width: 100%;
-	height: 100%;
+	text-align: center;
+	width: 100%;
 	display: block;
 	box-sizing: border-box;
-	background: #fff;		
-	padding-top: 50%;
-  padding-bottom: 50%;
-  padding-left: 50%;
-	padding-right: 50%;
+	background: #fff;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	margin-bottom: 20px;
 
   .title {
