--- a/app/assets/stylesheets/roles.css.scss
+++ b/app/assets/stylesheets/roles.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Roles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.navbar-brand.narrow{
+  height: 50% ;
+}
+.button_allign{
+  margin-top: 6px;
+  margin-bottom: 2px;
+}
