--- a/app/views/licences/_form.html.haml
+++ b/app/views/licences/_form.html.haml
@@ -34,8 +34,8 @@
     = f.label :req_status
     = f.text_field :req_status
   .field
-    = f.label :req_agency
-    = f.text_field :req_agency
+    = f.label :reg_agency
+    = f.text_field :reg_agency
   .field
     = f.label :req_priority
     = f.date_select :req_priority
