--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing user
+%h1 Редактирование пользователя
 
 = render 'form'
 
-= link_to 'Show', @user
+= link_to 'Отменить изменения', @user
 \|
-= link_to 'Back', users_path
+= link_to 'Вернуться к списку', users_path
