--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Отменить изменения', @user
+= link_to 'Отменить изменения', @user, class: 'btn btn-default'
 \|
-= link_to 'Вернуться к списку', users_path
+= link_to 'Вернуться к списку', users_path, class: 'btn btn-default'
