--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -2,4 +2,4 @@
 
 = render 'form'
 
-= link_to 'Вернуться к списку', users_path
+= link_to 'Вернуться к списку', users_path, class: 'btn btn-default'
