--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,10 +1,10 @@
 %p#notice= notice
 
 %p
-  %b Login:
+  %b Логин:
   = @user.login
 
 
-= link_to 'Edit', edit_user_path(@user)
+= link_to 'Редактировать', edit_user_path(@user), class: 'btn btn-default'
 \|
-= link_to 'Back', users_path
+= link_to 'Вернуться к списку', users_path, class: 'btn btn-default'
