--- a/app/views/people/edit.html.haml
+++ b/app/views/people/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing person
+%h1 Редактирование данных о человеке
 
 = render 'form'
 
-= link_to 'Show', @person
+= link_to 'Показать', @person, class: 'btn btn-default'
 \|
-= link_to 'Back', people_path
+= link_to 'Вернуться', people_path, class: 'btn btn-default'
