--- a/app/views/people/new.html.haml
+++ b/app/views/people/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New person
+%h1 Новая персона
 
 = render 'form'
 
-= link_to 'Back', people_path
+= link_to 'Вернуться', people_path, class: 'btn btn-default'
