--- a/app/views/people/start_layout.html.haml
+++ b/app/views/people/start_layout.html.haml
@@ -1,14 +1,14 @@
-.col-sm-4.col-lg-3
+.col-lg-4
   =link_to  research_efforts_path, class: 'tile prim_red1' do
     %i.fa.fa-flask.fa-lg
     %br
     НИР 
-.col-sm-4.col-lg-3
+.col-lg-4
   =link_to licences_path, class: 'tile green' do
     %i.fa.fa-file-text.fa-lg
     %br
     Лицензии
-.col-sm-4.col-lg-3
+.col-lg-4
   =link_to ois_requests_path, class: 'tile orange' do 
     %i.fa.fa-paste.fa-lg
     %br
