--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -6,7 +6,7 @@
         - @user.errors.full_messages.each do |msg|
           %li= msg
   .row
-    .col-md-6.col-lg-4
+    .col-lg-4
       .form-group
         = f.label :login
         = f.text_field :login, class: 'form-control'
