--- a/app/views/roles/edit.html.haml
+++ b/app/views/roles/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing role
+%h1 Редактировать роль
 
 = render 'form'
 
-= link_to 'Show', @role
+= link_to 'Показать', @role, class: 'btn btn-default'
 \|
-= link_to 'Back', roles_path
+= link_to 'Вернуться', roles_path, class: 'btn btn-default'
