--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -2,8 +2,8 @@
 
 %table.table-condensed
   %tr
-    %th Имя
     %th Фамилия
+    %th Имя
     %th Отчество
     %th Внешниее идентификаторы
     %th День рождения
@@ -13,11 +13,11 @@
 
   - @people.each do |person|
     %tr
-      %td= person.first_name
       %td= person.last_name
+      %td= person.first_name
       %td= person.second_name
       %td= person.external_ids
-      %td= person.birthday
+      %td= l(person.birthday)
       %td
         = link_to person, class: 'btn btn-info' do
           %i.fa.fa-eye.fa-lg
