--- a/app/views/role_users/edit.html.haml
+++ b/app/views/role_users/edit.html.haml
@@ -1,7 +1,7 @@
-%h1 Editing role_user
+%h1 Редактирование пары пользватель-роль
 
 = render 'form'
 
-= link_to 'Show', @role_user
+= link_to 'Показать', @role_user, class: 'btn btn-default'
 \|
-= link_to 'Back', role_users_path
+= link_to 'Вернуться', role_users_path, class: 'btn btn-default'
