--- a/app/views/role_users/new.html.haml
+++ b/app/views/role_users/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New role_user
+%h1 Новая пара пользователь-роль
 
 = render 'form'
 
-= link_to 'Back', role_users_path
+= link_to 'Вернуться', role_users_path, class: 'btn btn-default'
