--- a/app/views/roles/show.html.haml
+++ b/app/views/roles/show.html.haml
@@ -1,12 +1,12 @@
 %p#notice= notice
 
 %p
-  %b Name:
+  %b Название:
   = @role.name
 %p
-  %b Priority:
+  %b Приоритет:
   = @role.priority
 
-= link_to 'Edit', edit_role_path(@role)
+= link_to 'Редактировать', edit_role_path(@role), class: 'btn btn-default'
 \|
-= link_to 'Back', roles_path
+= link_to 'Вернуться', roles_path, class: 'btn btn-default'
