--- a/app/views/role_users/edit.html.haml
+++ b/app/views/role_users/edit.html.haml
@@ -1,7 +1,9 @@
+= link_to_back
+= link_to 'Показать', @role_user, class: 'btn btn-default'
 %h1 Редактирование пары пользватель-роль
 
 = render 'form'
 
-= link_to 'Показать', @role_user, class: 'btn btn-default'
-\|
-= link_to 'Вернуться', role_users_path, class: 'btn btn-default'
+
+-#\|
+-#= link_to 'Вернуться', role_users_path, class: 'btn btn-default'
