--- a/app/views/role_users/new.html.haml
+++ b/app/views/role_users/new.html.haml
@@ -1,5 +1,7 @@
+= link_to_back
+-#= link_to 'Вернуться', role_users_path, class: 'btn btn-default'
 %h1 Новая пара пользователь-роль
 
 = render 'form'
 
-= link_to 'Вернуться', role_users_path, class: 'btn btn-default'
+
