--- a/app/views/roles/new.html.haml
+++ b/app/views/roles/new.html.haml
@@ -1,5 +1,6 @@
+= link_to_back
 %h1 Новая роль
 
 = render 'form'
 
-= link_to 'Вернуться', roles_path, class: 'btn btn-default'
+-#= link_to 'Вернуться', roles_path, class: 'btn btn-default'
