--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,7 +1,9 @@
+=link_to_back
+
+= link_to 'Отменить изменения', @user, class: 'btn btn-default'
 %h1 Редактирование пользователя
 
 = render 'form'
 
-= link_to 'Отменить изменения', @user, class: 'btn btn-default'
-\|
-= link_to 'Вернуться к списку', users_path, class: 'btn btn-default'
+-#\|
+-#= link_to 'Вернуться к списку', users_path, class: 'btn btn-default'
