--- a/app/views/roles/edit.html.haml
+++ b/app/views/roles/edit.html.haml
@@ -1,7 +1,9 @@
+= link_to_back
+= link_to 'Показать', @role, class: 'btn btn-default'
 %h1 Редактировать роль
 
 = render 'form'
 
-= link_to 'Показать', @role, class: 'btn btn-default'
-\|
-= link_to 'Вернуться', roles_path, class: 'btn btn-default'
+
+-#\|
+-#= link_to 'Вернуться', roles_path, class: 'btn btn-default'
