--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,6 @@
+=link_to_back
 %h1 Новый пользователь
 
 = render 'form'
 
-= link_to 'Вернуться к списку', users_path, class: 'btn btn-default'
+-#= link_to 'Вернуться к списку', users_path, class: 'btn btn-default'
