--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,5 @@
+=link_to_back
+= link_to 'Редактировать', edit_user_path(@user), class: 'btn btn-default'
 %p#notice= notice
 
 %p
@@ -13,6 +15,6 @@
       - @user.role_users.each do |r|
         %li= r.to_text
 
-= link_to 'Редактировать', edit_user_path(@user), class: 'btn btn-default'
-\|
-= link_to 'Вернуться к списку', users_path, class: 'btn btn-default'
+
+-#\|
+-#= link_to 'Вернуться к списку', users_path, class: 'btn btn-default'
